force-app/main/default/objects/DailyLog__c/DailyLog__c.object-meta.xml
<CustomObject>
    <label>Daily Log</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>