force-app/main/default/objects/DailyLog__c/fields/Assistant_SalesMan__c.field-meta.xml
<CustomField>
    <fullName>Assistant_SalesMan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assistant SalesMan</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Daily Logs (Assistant SalesMan)</relationshipLabel>
    <relationshipName>Daily_Logs2</relationshipName>
    <type>Lookup</type>
</CustomField>