force-app/main/default/objects/DailyLog__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Logs</relationshipLabel>
    <relationshipName>DailyLogs</relationshipName>
    <type>Lookup</type>
</CustomField>