force-app/main/default/objects/DailyLog__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Daily Logs (Driver)</relationshipLabel>
    <relationshipName>Daily_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>