force-app/main/default/objects/DailyLog__c/fields/End_KM__c.field-meta.xml
<CustomField>
    <fullName>End_KM__c</fullName>
    <label>End KM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>