force-app/main/default/objects/DailyLog__c/fields/Sales_Man__c.field-meta.xml
<CustomField>
    <fullName>Sales_Man__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Man</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Daily Logs (Sales Man)</relationshipLabel>
    <relationshipName>Daily_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>