force-app/main/default/objects/DailyLog__c/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Manager</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Daily Logs (Sales Manager)</relationshipLabel>
    <relationshipName>Daily_Logs3</relationshipName>
    <type>Lookup</type>
</CustomField>