force-app/main/default/objects/DailyLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Clock_In__c</columns>
    <columns>Clock_Out__c</columns>
    <columns>Driver__c</columns>
    <columns>Sales_Man__c</columns>
    <columns>Start_KM__c</columns>
    <columns>End_KM__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>